[gd_scene load_steps=2 format=3 uid="uid://levelup_scene"]

[ext_resource type="Script" path="res://scripts/ui/LevelUpUI.gd" id="1_script"]

[node name="LevelUpUI" type="CanvasLayer"]
layer = 10
process_mode = 3
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ĐỘT PHÁ! CẢNH GIỚI 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Option1" type="Button" parent="Panel/VBoxContainer/OptionsContainer"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
text = "+20% Công Lực"

[node name="Option2" type="Button" parent="Panel/VBoxContainer/OptionsContainer"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
text = "+10% Tốc Độ"

[node name="Option3" type="Button" parent="Panel/VBoxContainer/OptionsContainer"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
text = "-10% Hồi Chiêu"
